--- a/templates/el/services.html
+++ b/templates/el/services.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}Συνδεδεμένες Υπηρεσίες{% endblock %}
-{% block header %}Συνδεδεμένες Υπηρεσίες{% endblock %}
+{% block title %}Συνδεδεμένες υπηρεσίες{% endblock %}
+{% block header %}Συνδεδεμένες υπηρεσίες{% endblock %}
 {% block content %}
-<p>Ενδειτικά, μερικές από τις υπηρεσίες που παρέχονται μέσω της Υποδομής ΑΑΙ
+<p>Ενδεικτικά, μερικές από τις υπηρεσίες που παρέχονται μέσω της Υποδομής ΑΑΙ
 του ΕΔΕΤ στην ακαδημαϊκή, ερευνητική και εκπαιδευτική κοινότητα της
 Ελλάδας:</p>
 <ul>
 <li><a href="http://pithos.grnet.gr/">Υπηρεσία αποθήκευσης δεδομένων «Πίθος»</a></li>
 <li><a href="https://www.dreamspark.com/">Υπηρεσία Microsoft DreamSpark</a>, διανομής δωρεάν λογισμικού σε φοιτητές</li>
-<li><a href="http://anafandon.grnet.gr/">Υπηρεσία ΑΝΑΦΑΝΔΟΝ-MSDNAA</a>, διανομής δωρεάν λογισμικού σε φοιτητές μέσω προγράμματος MSDNA</li>
+<li><a href="http://anafandon.grnet.gr/">Υπηρεσία Αναφανδόν-MSDNAA</a>, διανομής δωρεάν λογισμικού σε φοιτητές μέσω προγράμματος MSDN-Academic Alliance <em>(απαιτείται συνδρομή του ακαδημαϊκού τμήματος)</em></li>
 <li><a href="http://iptv.grnet.gr/">Υπηρεσία IPTV</a>, μετάδοσης ψηφιακής τηλεόρασης</li>
 <li><a href="http://rts.grnet.gr/">Υπηρεσία διοργάνωσης τηλεδιασκέψεων</a> και τηλεφωνίας VoIP (Real Time Services)</li>
+<li><a href="http://www.eudoxus.gr/">«Εύδοξος»</a>, Ηλεκτρονική υπηρεσία ολοκληρωμένης διαχείρισης συγγραμμάτων</li>
 </ul>
 {% endblock %}
