--- a/templates/el/documentation.html
+++ b/templates/el/documentation.html
@@ -6,7 +6,7 @@
 
 <h2>Τεκμηρίωση Υποδομής</h2>
 <ul>
-  <li><a href="/static/policy.pdf">Πολιτική και πρακτικές</a> (έκδοση 1.0.0)</li>
+  <li><a href="/policy/">Πολιτική και πρακτικές</a> (έκδοση 1.0.0)</li>
   <li><a href="/schema/grEduPerson/">Σχήμα grEduPerson</a> (έκδοση 1.0)</li>
 </ul>
 
