Add a href to grnet.gr from the main logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 	</div>
 	<div class="header-placeholder">
 		<div class="header-image-placeholder">
-			<img src="/static/images/grnet.png">
+			<a href="http://www.grnet.gr/"><img src="/static/images/grnet.png" alt="GRNET" title="GRNET"></a>
 		</div>
 		<div class="header-text-placeholder">
 			<a href="http://aai.grnet.gr/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a>
