Fix some HTML errors

--- a/templates/en-us/index.html
+++ b/templates/en-us/index.html
@@ -17,8 +17,7 @@ community of Greece, as well as third parties wishing to provide services to
 the community.
 </p>
 
-<p>
-The federation's members fall into two categories:
+<p>The federation's members fall into two categories:</p>
 <ol>
 <li><strong>Identity Providers (IdP)</strong>: the entities (e.g. academic or
 research institutions) authenticating their users and certifying their
@@ -30,12 +29,9 @@ personal data in order to facilitate user authorization.
 the community. They may receive individual users' personal data, under consent,
 with the purpose of authorization and providing personalized services.</li>
 </ol>
-</p>
 
-<p>
-The participation of an <strong>Identity Provider</strong> in the Federation
-yields multiple benefits for its users:
-</p>
+<p>The participation of an <strong>Identity Provider</strong> in the Federation
+yields multiple benefits for its users:</p>
 <ul>
 <li>logging into a federated service is performed using the user's existing
 institutional account, without requiring separate registration.</li>
