--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,12 @@
 <body>
 
 <div class="language-placeholder">
-	<div class="language-container" align="right">
+	<div class="language-container">
 		<div class="language-div">
 			<div class="langtop">
 				<div></div>
 			</div>
-		<a href="/setlanguage/el">Ελληνικά</a>&nbsp;&nbsp;•&nbsp;&nbsp;<a href="/setlanguage/en">English</a>
+			<a href="/setlanguage/el">Ελληνικά</a>&nbsp;&nbsp;•&nbsp;&nbsp;<a href="/setlanguage/en">English</a>
 		</div>
 	</div>
 </div>
