HTML fixes for IE6 and some general cleanups

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,9 +34,9 @@
 		<div class="header-image-placeholder">
 			<a href="http://www.grnet.gr/"><img src="/static/images/grnet.png" alt="GRNET" title="GRNET"></a>
 		</div>
-		<div class="header-text-placeholder">
+		<div class="header-outer-text-placeholder"><div class="header-inner-text-placeholder">
 			<a href="http://aai.grnet.gr/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a>
-		</div>
+		</div></div>
 	</div>
 	<div class="headermenu-placeholder">
 		<a href="http://wayf.grnet.gr/">{% trans "Select your home institution" %}</a> 
