--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ body {
 	font-size: 100%;
 }
 
-body,td {
+body, td {
 	font-family: Arial, Verdana, Helvetica, sans-serif;
 	color: #656565;
 	text-align: justify;
@@ -51,38 +51,62 @@ body,td {
 	background-color: white;
 	padding: 1px;
 }
+
 .language-div {
 	text-align: center;
-	background-color:white; 
+	background-color: white;
 	float: right;
 }
 
 .header-placeholder {
 	margin-right: 17px;
-	margin-left: 16px;
+	margin-left: 17px;
 	border-top: 1px solid #b2b2b2;
-	text-align: left
+	background-color: silver;
+	/* IE6 hacks for vertical alignment & positioning */
+	height: 100%;     /* triggers hasLayout */
+	overflow: hidden; /* to work with IE/Mac */
+	#position: relative;
 }
 
 .header-image-placeholder {
 	display: table-cell;
-	width: 10%;
-	height: 80px;
-	vertical-align: middle;
-	text-align: left;
 	text-align: center;
+	background-color: white;
+	padding-left: 10px;
 	padding-right: 10px;
-	
+	/* IE6 hacks for vertical alignment & positioning */
+	#float: left;
 }
 
-.header-text-placeholder {
+.header-outer-text-placeholder {
 	display: table-cell;
-	height: 80px;
 	vertical-align: middle;
-	font-size: 140%;
-	background-color: silver;
-	width: 90%;
+	text-align: left;
 	padding: 10px;
+	font-size: 140%;
+	/* IE6 hacks for vertical alignment & positioning */
+	#position: absolute;
+	#top: 50%;
+}
+
+.header-inner-text-placeholder {
+	/* IE6 hacks for vertical alignment & positioning */
+	#float: left;
+	#position: relative;
+	#top: -50%;
+}
+
+.headermenu-placeholder {
+	text-align: right;
+	padding-right: 10px;
+	margin-left: 17px;
+	margin-right: 17px;
+	font-size: 0.8em;
+	color: #5A5A7D;
+	background-color: #F0F0F0;
+	border-top: 1px solid #B2B2B2;
+	border-bottom: 1px solid #B2B2B2;
 }
 
 h1 {
@@ -93,32 +117,9 @@ h1 {
 	padding: 0em;
 }
 
-.collapse {
-	width: 1px;
-	height: 1px;
-}
-
 .aailogo-placeholder {
-	background-color: #FFF;
-	padding-left: 16px;
-	
-}
-
-.headermenu-placeholder {
-	background-color: #F0F0F0;
-	border-top: 1px solid #B2B2B2;
-	border-bottom: 1px solid #B2B2B2;
-	font-size: 0.8em;
-	padding-right: 10px;
-	color: #5A5A7D;
-	text-align: right;
-	margin-left: 16px;
-	margin-right: 17px;
-}
-
-.headermenu-placeholder a:hover {
-	text-decoration: none;
-	color: orange;
+	background-color: white;
+	padding-left: 17px;
 }
 
 a {
@@ -133,6 +134,16 @@ a:hover {
 
 a img {
 	border: 0px;
+}
+
+.header-text-placeholder a:hover {
+	text-decoration: none;
+	color: #666666;
+}
+
+.headermenu-placeholder a:hover {
+	text-decoration: none;
+	color: orange;
 }
 
 .footer {
@@ -161,7 +172,8 @@ a img {
 .rbbot {
 	background: url(images/br.gif) no-repeat bottom right;
 }
-/* height and width stuff, width not really nessisary.*/
+
+/* height and width stuff, width not really necessary */
 .rbtop div,.rbtop,.rbbot div,.rbbot {
 	width: 667px;
 	height: 7px;
