--- a/static/style.css
+++ b/static/style.css
@@ -9,20 +9,20 @@ body, td {
 	text-align: justify;
 }
 
-.content {
+div#content {
 	width: 700px;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: white;
 }
 
-.language-placeholder {
+div#language {
 	width: 700px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.language-container {
+div#language-container {
 	display: table-cell;
 	width: 700px;
 	margin-left: auto;
@@ -30,12 +30,12 @@ body, td {
 	font-size: 80%;
 }
 
-.language-list {
+div#language-list {
 	white-space: nowrap;
 	font-size: 80%;
 }
 
-.language-list li {
+div#language-list li {
 	display: block;
 	float: right;
 	list-style-type: none;
@@ -43,7 +43,7 @@ body, td {
 	padding: 0px;
 }
 
-.language-list li.active {
+div#language-list li.active {
 	display: block;
 	float: right;
 	list-style-type: none;
@@ -52,13 +52,13 @@ body, td {
 	padding: 1px;
 }
 
-.language-div {
+div#language-div {
 	text-align: center;
 	background-color: white;
 	float: right;
 }
 
-.header-placeholder {
+div#header {
 	margin-right: 17px;
 	margin-left: 17px;
 	border-top: 1px solid #b2b2b2;
@@ -69,7 +69,7 @@ body, td {
 	#position: relative;
 }
 
-.header-image-placeholder {
+div#header-image {
 	display: table-cell;
 	text-align: center;
 	background-color: white;
@@ -79,7 +79,7 @@ body, td {
 	#float: left;
 }
 
-.header-outer-text-placeholder {
+div#header-outer-text {
 	display: table-cell;
 	vertical-align: middle;
 	text-align: left;
@@ -90,14 +90,14 @@ body, td {
 	#top: 50%;
 }
 
-.header-inner-text-placeholder {
+div#header-inner-text {
 	/* IE6 hacks for vertical alignment & positioning */
 	#float: left;
 	#position: relative;
 	#top: -50%;
 }
 
-.headermenu-placeholder {
+div#header-menu {
 	text-align: right;
 	padding-right: 10px;
 	margin-left: 17px;
@@ -117,7 +117,7 @@ h1 {
 	padding: 0em;
 }
 
-.aailogo-placeholder {
+div#aailogo {
 	background-color: white;
 	padding-left: 17px;
 }
@@ -136,12 +136,12 @@ a img {
 	border: 0px;
 }
 
-.header-text-placeholder a:hover {
+div#header-text a:hover {
 	text-decoration: none;
 	color: #666666;
 }
 
-.headermenu-placeholder a:hover {
+div#headermenu a:hover {
 	text-decoration: none;
 	color: orange;
 }
@@ -152,80 +152,56 @@ a img {
 	padding: 1em;
 }
 
-.rbroundbox {
+div#rbroundbox {
 	background-color: #f1f1f1;
 }
-
-.rbtop div {
+div#rbtop div {
 	background: url(images/tl.gif) no-repeat top left;
 }
-
-.rbtop {
+div#rbtop {
 	background: url(images/tr.gif) no-repeat top right;
 }
-
-.rbbot div {
+div#rbbot div {
 	background: url(images/bl.gif) no-repeat bottom left;
 }
-
-
-.rbbot {
+div#rbbot {
 	background: url(images/br.gif) no-repeat bottom right;
 }
-
-/* height and width stuff, width not really necessary */
-.rbtop div,.rbtop,.rbbot div,.rbbot {
-	width: 667px;
+div#rbtop div, div#rbtop, div#rbbot div, div#rbbot {
 	height: 7px;
 	font-size: 1px;
 }
-
-.rbcontent {
+div#rbcontent {
 	margin: 6px 10px 10px 10px;
 	font-size: 13px;
 }
-
-.rbroundbox {
+div#rbroundbox {
 	width: 667px;
 	margin: 0;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.pagebot {
+div#pagebot {
 	background: url(images/bottom--x.gif) no-repeat bottom right;
 }
-
-.pagebot div {
+div#pagebot div {
 	background: url(images/bottomx--.gif) no-repeat bottom left;
 }
-
-
-.pagetop div {
+div#pagetop div {
 	background: url(images/topx--.gif) no-repeat top left;
 }
-
-.pagebot div, .pagetop div{
-	width: 667px;	height: 7px;
+div#pagebot div, div#pagetop div{
+	width: 667px;
+	height: 7px;
 	font-size: 1px;
 }
 
-.langbot {
-	background: url(images/bottom--x.gif) no-repeat bottom right;
-}
-
-.langbot div {
-	background: url(images/bottomx--.gif) no-repeat bottom left;
-}
-.langtop {
+div#langtop {
 	background: url(images/top--x.gif) no-repeat top right;
 }
-
-.langtop div {
+div#langtop div {
 	background: url(images/topx--.gif) no-repeat top left;
-}
-
-.langbot div, .langtop div{
 	width: 150px;
 	height: 7px;
 	font-size: 1px;
