--- a/templates/en-us/wayf_from_sp.html
+++ b/templates/en-us/wayf_from_sp.html
@@ -6,7 +6,7 @@
 <p>You were redirected to this page because you tried to access a service that uses GRNET's AAI. In order to proceed, you have to select your Home Organization from the list below. You may save your selection, in order to avoid this question during future uses of GRNET's AAI.</p>
 
 <div id="idpform">
-<form id="idp_selection_form" method="post">
+<form id="idp_selection" method="post">
 	<select name="user_idp">
 	{% include "idp_dropdown.html" %}
 	</select>
