Minor changes to wording

--- a/templates/el/index.html
+++ b/templates/el/index.html
@@ -6,7 +6,7 @@
 <p>
 Η Υποδομή Ταυτοποίησης και Εξουσιοδότησης (<em>Authentication &amp;
 Authorization Infrastructure - AAI</em>) επιτρέπει σε διαφορετικούς οργανισμούς
-να συνεργάζονται στην απόδοση δικαιωμάτων πρόσβασης για εφαρμογές που έχουν
+να συνεργάζονται στην εκχώρηση δικαιωμάτων πρόσβασης για εφαρμογές που έχουν
 διιδρυματικό χαρακτήρα. Μέσω της υποδομής, οι χρήστες της Ομοσπονδίας μπορούν
 να λάβουν υπηρεσίες με ασφάλεια και εμπιστευτικότητα των προσωπικών τους
 δεδομένων χρησιμοποιώντας απλά τον ιδρυματικό τους λογαριασμό.
