--- a/templates/en-us/documentation.html
+++ b/templates/en-us/documentation.html
@@ -6,7 +6,7 @@
 
 <h2>Federation documentation</h2>
 <ul>
-  <li><a href="/policy/">Policy and practices</a> (version 1.0.0) [in Greek]</li>
+  <li><a href="/policy/">Policy and procedures</a> (version 1.0.0) [in Greek]</li>
   <li><a href="/schema/grEduPerson/">grEduPerson schema</a> (version 1.0)</li>
 </ul>
 
