--- a/templates/el/documentation.html
+++ b/templates/el/documentation.html
@@ -7,7 +7,7 @@
 <h2>Τεκμηρίωση Υποδομής</h2>
 <ul>
   <li><a href="/policy/">Πολιτική και διαδικασίες</a> (έκδοση 1.0.0)</li>
-  <li><a href="/schema/grEduPerson/">Σχήμα grEduPerson</a> (έκδοση 1.0)</li>
+  <li><a href="/schemas/grEduPerson/">Σχήμα grEduPerson</a> (έκδοση 1.0)</li>
 </ul>
 
 <h2>Λογισμικό</h2>
