Add forrester.grnet.gr to services

--- a/templates/el/services.html
+++ b/templates/el/services.html
@@ -7,11 +7,12 @@
 του ΕΔΕΤ στην ακαδημαϊκή, ερευνητική και εκπαιδευτική κοινότητα της
 Ελλάδας:</p>
 <ul>
-<li><a href="http://pithos.grnet.gr/">Υπηρεσία αποθήκευσης δεδομένων «Πίθος»</a></li>
-<li><a href="https://www.dreamspark.com/">Υπηρεσία Microsoft DreamSpark</a>, διανομής δωρεάν λογισμικού σε φοιτητές</li>
-<li><a href="http://anafandon.grnet.gr/">Υπηρεσία Αναφανδόν-MSDNAA</a>, διανομής δωρεάν λογισμικού σε φοιτητές μέσω προγράμματος MSDN-Academic Alliance <em>(απαιτείται συνδρομή του ακαδημαϊκού τμήματος)</em></li>
-<li><a href="http://iptv.grnet.gr/">Υπηρεσία IPTV</a>, μετάδοσης ψηφιακής τηλεόρασης</li>
+<li><a href="http://pithos.grnet.gr/">«Πίθος»</a>, υπηρεσία αποθήκευσης αρχείων</li>
+<li><a href="http://www.eudoxus.gr/">«Εύδοξος»</a>, υπηρεσία ολοκληρωμένης διαχείρισης συγγραμμάτων</li>
+<li><a href="https://www.dreamspark.com/">Microsoft Dreamspark</a>, υπηρεσία διανομής δωρεάν λογισμικού σε φοιτητές</li>
+<li><a href="http://anafandon.grnet.gr/">Αναφανδόν-MSDNAA</a>, υπηρεσία διανομής δωρεάν λογισμικού σε φοιτητές μέσω προγράμματος MSDN-Academic Alliance <em>(απαιτείται συνδρομή του ακαδημαϊκού τμήματος)</em></li>
+<li><a href="http://forrester.grnet.gr/">Forrester</a>, πρόσβαση στη δημοσιευμένη έρευνα και αναλύσεις της Forrester</li>
+<li><a href="http://iptv.grnet.gr/">IPTV</a>, μετάδοση ψηφιακής τηλεόρασης</li>
 <li><a href="http://rts.grnet.gr/">Υπηρεσία διοργάνωσης τηλεδιασκέψεων</a> και τηλεφωνίας VoIP (Real Time Services)</li>
-<li><a href="http://www.eudoxus.gr/">«Εύδοξος»</a>, Ηλεκτρονική υπηρεσία ολοκληρωμένης διαχείρισης συγγραμμάτων</li>
 </ul>
 {% endblock %}
