Reword support page's text

--- a/templates/el/support.html
+++ b/templates/el/support.html
@@ -3,7 +3,8 @@
 {% block title %}{% trans "User support" %}{% endblock %}
 {% block header %}{% trans "User support" %}{% endblock %}
 {% block content %}
-Παρουσιάστηκε πρόβλημα κατά τη χρήση της Υποδομής Ταυτοποίησης και Εξουσιοδότησης του ΕΔΕΤ. Παρακαλούμε επικοινωνήστε με τον οικείο φορέα σας.
+Εάν παρουσιάστηκε πρόβλημα κατά τη χρήση της Υποδομής Ταυτοποίησης και Εξουσιοδότησης του ΕΔΕΤ,
+παρακαλούμε επικοινωνήστε με τον οικείο φορέα σας.
 {% if idpname %}
 Σύμφωνα με την επιλεγμένο φορέα σας, «<strong>{{ idpname }}</strong>», 
 μπορείτε να επικοινωνήσετε με έναν από τους παρακάτω τρόπους:
