--- a/templates/en-us/support.html
+++ b/templates/en-us/support.html
@@ -3,7 +3,8 @@
 {% block title %}{% trans "User support" %}{% endblock %}
 {% block header %}{% trans "User support" %}{% endblock %}
 {% block content %}
-A problem occured while attempting to use GRNET's AAI. Please contact your Home Organization.
+If you encountered a problem while attempting to use GRNET's Authentication and Authorization
+Infrastructure, please contact your Home Organization.
 {% if idpname %}
 According to your selected Home Organization, &quot;<strong>{{idpname}}</strong> &quot;, you may contact them in the following ways:
 <ul>
