--- a/templates/el/support.html
+++ b/templates/el/support.html
@@ -6,7 +6,7 @@
 Εάν παρουσιάστηκε πρόβλημα κατά τη χρήση της Υποδομής Ταυτοποίησης και Εξουσιοδότησης του ΕΔΕΤ,
 παρακαλούμε επικοινωνήστε με τον οικείο φορέα σας.
 {% if idpname %}
-Σύμφωνα με την επιλεγμένο φορέα σας, «<strong>{{ idpname }}</strong>», 
+Σύμφωνα με τον επιλεγμένο φορέα σας, «<strong>{{ idpname }}</strong>», 
 μπορείτε να επικοινωνήσετε με έναν από τους παρακάτω τρόπους:
 <ul>
 {% if idp.contact.email %}
