--- a/templates/en-us/services.html
+++ b/templates/en-us/services.html
@@ -9,6 +9,7 @@
 <li><a href="http://www.eudoxus.gr/">“Eudoxus”</a>, student book distribution</a></li>
 <li><a href="https://www.dreamspark.com/">Microsoft Dreamspark</a>, free access to software for students</li>
 <li><a href="http://anafandon.grnet.gr/">Anafandon-MSDNAA</a>, free access to MSDN-Academic Alliance software for students <em>(requires a departmental subscription)</em></li>
+<li><a href="http://www.msoffice4students.gr/">MSOffice4Students</a>, Microsoft software e-shop</li>
 <li><a href="http://forrester.grnet.gr/">Forrester</a>, access to Forrester Research's research papers</li>
 <li><a href="http://iptv.grnet.gr/">IPTV</a>, digital television broadcasting</li>
 <li><a href="http://rts.grnet.gr/">Teleconference service</a> Voice-over-IP &amp; real-time services)</li>
