--- a/templates/el/services.html
+++ b/templates/el/services.html
@@ -15,5 +15,6 @@
 <li><a href="http://forrester.grnet.gr/">Forrester</a>, πρόσβαση στη δημοσιευμένη έρευνα και αναλύσεις της Forrester</li>
 <li><a href="http://iptv.grnet.gr/">IPTV</a>, μετάδοση ψηφιακής τηλεόρασης</li>
 <li><a href="http://rts.grnet.gr/">Υπηρεσία διοργάνωσης τηλεδιασκέψεων</a> και τηλεφωνίας VoIP (Real Time Services)</li>
+<li><a href="http://mynetlab.grnet.gr/">myNetLab</a>, υπηρεσία δικτυακών εργαστηρίων με πραγματικό εξοπλισμό</li>
 </ul>
 {% endblock %}
