--- a/templates/en-us/services.html
+++ b/templates/en-us/services.html
@@ -13,5 +13,6 @@
 <li><a href="http://forrester.grnet.gr/">Forrester</a>, free access to Forrester Research's research papers</li>
 <li><a href="http://iptv.grnet.gr/">IPTV</a>, digital television broadcasting</li>
 <li><a href="http://rts.grnet.gr/">Teleconference service</a> Voice-over-IP &amp; real-time services)</li>
+<li><a href="http://mynetlab.grnet.gr/">myNetLab</a>, networking labs using real hardware</li>
 </ul>
 {% endblock %}
