AAI website: prepare for internationalized policy documents

--- a/templates/el/documentation.html
+++ b/templates/el/documentation.html
@@ -6,7 +6,7 @@
 
 <h2>Τεκμηρίωση Υποδομής</h2>
 <ul>
-  <li><a href="/policy/">Πολιτική και διαδικασίες</a> (έκδοση 1.0.0)</li>
+  <li><a href="/policy/policy-el.pdf">Πολιτική και διαδικασίες</a></li>
   <li><a href="/schemas/grEduPerson/">Σχήμα grEduPerson</a> (έκδοση 1.0)</li>
 </ul>
 
