--- a/templates/en-us/documentation.html
+++ b/templates/en-us/documentation.html
@@ -6,8 +6,8 @@
 
 <h2>Federation documentation</h2>
 <ul>
-  <li><a href="/policy/">Policy and procedures</a> (version 1.0.0) [in Greek]</li>
-  <li><a href="/schemas/grEduPerson/">grEduPerson schema</a> (version 1.0)</li>
+  <li><a href="/policy/policy-en.pdf">Policy and procedures</a></li>
+  <li><a href="/schemas/grEduPerson/">grEduPerson schema</a></li>
 </ul>
 
 <h2>Software</h2>
