backlog: introduce the urn:mace:grnet.gr registry in documentation

--- a/templates/el/documentation.html
+++ b/templates/el/documentation.html
@@ -47,6 +47,11 @@
 </a>
 </li>
 
+<li><a href="/registry/urn/">
+Μητρώο του namespace <strong>urn:mace:grnet.gr</strong>
+</a>
+</li>
+
 </ul>
 
 <h2>Επικοινωνία</h2>
