--- a/templates/en-us/documentation.html
+++ b/templates/en-us/documentation.html
@@ -44,7 +44,12 @@ Registry of the <em>undergraduateBranch</em> attribute of the
 
 <li><a href="/registry/eduPersonEntitlement/">
 Registry of the <em>eduPersonEntitlement</em> attribute of the
-<em>eduPerson</em> schema, for this federationγ
+<em>eduPerson</em> schema, for this federation
+</a>
+</li>
+
+<li><a href="/registry/urn/">
+Registry of the <strong>urn:mace:grnet.gr</strong> namespace
 </a>
 </li>
 
