backlog: eduPersonEntitlement updates

--- a/templates/en-us/registry/eduPersonEntitlement.html
+++ b/templates/en-us/registry/eduPersonEntitlement.html
@@ -7,6 +7,10 @@
 In GRNET's Federation, the following values of <em>eduPersonEntitlement</em> are in use:
 <ul>
   <li><strong>urn:mace:dir:entitlement:common-lib-terms</strong>, for access to academic libraries</li>
+  <li><strong>urn:mace:grnet.gr:pki:user</strong>, for access to the <a href="https://pki.grnet.gr/">service for issuing personal X.509 certificates via GRNET PKI</a></li>
+  <li><strong>urn:mace:grnet.gr:pki:admin</strong>, for access to the <a href="https://pki.grnet.gr/">service for issuing personal X.509 certificates via GRNET PKI</a>, as an organization administrator</li>
+  <li><strong>urn:mace:grnet.gr:eduroam:admin</strong>, for access to the <a href="https://www.eduroam.gr/management">eduroam management application</a>, as an organization administrator</li>
+  <li><strong>urn:mace:grnet.gr:fod:admin</strong>, for access to the <a href="https://fod.grnet.gr/fod/info/en/">Firewall on Demand application</a>, as an organization administrator</li>
 </ul>
 
 {% endblock %}
